# Tetris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TC-mingw.cmake  Tetris  common.cpp  common.hpp  game.cpp  game.hpp  main.cpp
assets/: texatlas.layout
game/: common.cpp  common.hpp  game.cpp  game.hpp  level.cpp  level.hpp  main.cxx  piece.cpp  piece.hpp  randomizer.cpp  randomizer.hpp
rendering/: active.cpp  active.hpp  background.cpp  background.hpp  board.cpp  board.hpp  constants.hpp  dim.cpp  dim.hpp  frame.cpp  frame.hpp  main_temp.cpp  math.hpp  mesh.cpp  mesh.hpp  next.cpp  next.hpp  number.cpp  number.hpp  rendering.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp
tests/: game_level.cxx  game_randomizer.cxx
